--- a/src/component/GlobalStyle/GlobalStyles.scss
+++ b/src/component/GlobalStyle/GlobalStyles.scss
@@ -3,8 +3,13 @@
 
 :root {
     --primary: rgb(254, 44, 85);
+    //default layout
+    ---default-layout-header-height: 60px;
+    ---default-layout-header-width: 1150px;
 }
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 :html {
