--- a/src/component/GlobalStyle/GlobalStyles.scss
+++ b/src/component/GlobalStyle/GlobalStyles.scss
@@ -3,6 +3,8 @@
 
 :root {
     --primary: rgb(254, 44, 85);
+    --black: #000;
+    --text-color: #333;
     //default layout
     ---default-layout-header-height: 60px;
     ---default-layout-header-width: 1150px;
@@ -22,4 +24,15 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
+    color: var(--text-color);
+}
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
