--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .wrapper {
+    --search-border-radius: 92px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-button-width: 52px;
     height: var(---default-layout-header-height, 60px); // ko cos biến nó lấy gt mặt định là 60px
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
     display: flex;
@@ -7,4 +11,73 @@
 .inner {
     height: 100%;
     width: var(---default-layout-header-width, 1150px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo {
+}
+.search {
+    position: relative;
+    width: 361px;
+    height: var(--search-height);
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    display: flex;
+    padding-left: 16px;
+    border: 1.5px solid transparent;
+    input {
+        flex: 1;
+        color: var(--black);
+        font-size: 1.2rem;
+        padding: 12px 0;
+        background-color: transparent;
+        caret-color: var(--primary);
+    }
+    input:not(:placeholder-shown) ~ .search-btn {
+        // ngã là gõ thằng này chuyển sang thàng kia
+        // nhập vào có 1 cái gì đó
+        color: rgba(22, 24, 35, 0.34);
+    }
+    &::after {
+        content: '';
+        position: absolute;
+        top: var(--search-top-spacer);
+        right: var(--search-button-width);
+        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+        width: 1px;
+        background-color: rgba(22, 24, 35, 0.12);
+    }
+    &:focus-within {
+        border-color: rgba(22, 24, 35, 0.2);
+    }
+}
+
+.clear {
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(22, 24, 35, 0.34);
+}
+.loading {
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-40%);
+    color: rgba(22, 24, 35, 0.34);
+}
+.search-btn {
+    width: var(--search-button-width);
+    height: 100%;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size: 1.4rem;
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
+        cursor: pointer;
+    }
+    &:active {
+        background: rgba(22, 24, 35, 0.06);
+    }
 }
