--- a/src/component/GlobalStyle/GlobalStyles.scss
+++ b/src/component/GlobalStyle/GlobalStyles.scss
@@ -5,6 +5,7 @@
     --primary: rgb(254, 44, 85);
     --black: #000;
     --text-color: #333;
+    --white: #fff;
     //default layout
     ---default-layout-header-height: 60px;
     ---default-layout-header-width: 1150px;
