--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -15,7 +15,9 @@
     align-items: center;
     justify-content: space-between;
 }
-.logo {
+.search,
+.search-result {
+    width: 361px;
 }
 .search {
     position: relative;
@@ -51,33 +53,39 @@
     &:focus-within {
         border-color: rgba(22, 24, 35, 0.2);
     }
-}
-
-.clear {
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgba(22, 24, 35, 0.34);
-}
-.loading {
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-40%);
-    color: rgba(22, 24, 35, 0.34);
-}
-.search-btn {
-    width: var(--search-button-width);
-    height: 100%;
-    border-top-right-radius: var(--search-border-radius);
-    border-bottom-right-radius: var(--search-border-radius);
-    font-size: 1.4rem;
-    &:hover {
-        background-color: rgba(22, 24, 35, 0.03);
-        cursor: pointer;
+    .search-title {
+        padding: 5px 12px;
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: rgba(22, 24, 35, 0.5);
     }
-    &:active {
-        background: rgba(22, 24, 35, 0.06);
+
+    .clear {
+        position: absolute;
+        right: calc(var(--search-button-width) + 16px);
+        top: 50%;
+        transform: translateY(-50%);
+        color: rgba(22, 24, 35, 0.34);
+    }
+    .loading {
+        position: absolute;
+        right: calc(var(--search-button-width) + 16px);
+        top: 50%;
+        transform: translateY(-40%);
+        color: rgba(22, 24, 35, 0.34);
+    }
+    .search-btn {
+        width: var(--search-button-width);
+        height: 100%;
+        border-top-right-radius: var(--search-border-radius);
+        border-bottom-right-radius: var(--search-border-radius);
+        font-size: 1.4rem;
+        &:hover {
+            background-color: rgba(22, 24, 35, 0.03);
+            cursor: pointer;
+        }
+        &:active {
+            background: rgba(22, 24, 35, 0.06);
+        }
     }
 }
