Xây dựng header UI phần header phần 4

--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -89,3 +89,11 @@
         }
     }
 }
+
+.more-btn {
+    font-size: 16px;
+    color: #0c0c0c;
+    margin-left: 20px;
+    background-color: transparent;
+    padding: 4px 10px;
+}
