--- a/src/component/GlobalStyle/GlobalStyles.scss
+++ b/src/component/GlobalStyle/GlobalStyles.scss
@@ -8,7 +8,8 @@
     --white: #fff;
     //default layout
     ---default-layout-header-height: 60px;
-    ---default-layout-header-width: 1150px;
+    ---default-layout-width: 1150px;
+    ---default-layout-horizontal-spacer: 24px;
 }
 * {
     margin: 0;
