--- a/src/component/Popper/Menu/Menu.module.scss
+++ b/src/component/Popper/Menu/Menu.module.scss
@@ -4,7 +4,7 @@
 
     .menu-item {
         margin-left: 0px;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 500;
     }
 }
@@ -14,8 +14,27 @@
 // menu item
 .menu-item {
     width: 100%;
-    padding: 12px 16px;
+
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
     }
+}
+// header
+.header {
+    position: relative;
+    height: 50px;
+    margin-top: -8px;
+}
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+}
+.header-title {
+    position: absolute;
+    font-size: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
