--- a/src/component/Popper/Menu/Menu.module.scss
+++ b/src/component/Popper/Menu/Menu.module.scss
@@ -15,6 +15,9 @@
 .menu-item {
     width: 100%;
 
+    &.separate {
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
+    }
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
     }
